--- a/indexStyle.css
+++ b/indexStyle.css
@@ -6,7 +6,12 @@
 	opacity: 1;
 	border-radius: 5px;
 	margin-bottom: 10px;
-	box-shadow: 0px -1px #CCCCCC;
+	box-shadow: 0px 1px 0px 1px #CCCCCC;
+}
+
+.mainListItems:active
+{
+	box-shadow: inset 0px 1px 0px 1px #CCCCCC;
 }
 
 .mainListItems:after
