--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,3 +1,17 @@
+.alert {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.alert-danger 
+{
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
 .mainListItems
 {
 	width: 100%;
