--- a/indexStyle.css
+++ b/indexStyle.css
@@ -67,7 +67,9 @@
 	justify-content: center;
 	opacity: 1;
 }
-.dayTemp{
+
+.dayTemp
+{
 	float: left;
 	height: 100%;
 	width: 30%;
@@ -77,7 +79,9 @@
 	font-size: 9px;
 	opacity: 1;
 }
-.dayName{
+
+.dayName
+{
 	float: left;
 	height: 100%;
 	width: 40%;
@@ -87,7 +91,9 @@
 	font-size: 9px;
 	opacity: 1;
 }
-.dayImg{
+
+.dayImg
+{
 	float: left;
 	height: 100%;
 	width: 30%;
@@ -96,9 +102,49 @@
 	justify-content: center;
 	opacity: 1;
 }
-.day{
+
+.day
+{
 	clear: both;
 }
+
 #yesSearch{
 	text-decoration: underline;
+}
+
+#searchResults
+{
+	font-size: 17px;
+	width: 100%;
+	border: 1px solid #CCCCCC;
+	box-shadow: 1px 1px #CCCCCC;
+}
+
+#searchResults:after
+{
+	opacity: 0.5
+}
+
+#searchResults li
+{
+	width: 100%;
+	height: 30px;
+	margin-top: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	border-bottom: 1px solid #CCCCCC;
+	box-shadow:0px 1px #CCCCCC;
+}
+
+#searchResults li div
+{
+	margin-left: 5px;
+	width: 95%;
+	float: left;
+}
+
+#searchResults li img
+{
+	float:right;
 }
