--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -159,3 +159,19 @@ body
 	height: 75%;
 	display:block;
 }
+
+#leftCity
+{
+	border-right: 1px solid #CCCCCC;
+	width: 50%;
+	height: 100%;
+	float: left;
+}
+
+#rightCity
+{
+	width: 49%;
+	height: 100%;
+	float: left;
+}
+
