--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -1,6 +1,12 @@
+html, body, cityDetail, detailContent, detail
+{
+   height: 100%;
+}
+
 body
 {
 	overflow: hidden;
+	position: relativ
 }
 
 .alert {
@@ -175,3 +181,67 @@ body
 	float: left;
 }
 
+#dailyInformation
+{
+	height: 100%;
+	width: 100%;
+	float: left;
+}
+
+#days
+{
+	height: 60%;
+	width: 100%;
+	float:left;
+	overflow-y: auto;
+}
+
+.day
+{
+	height: 45px;
+	width: 95%;
+	margin-bottom: 10px;
+	border: 1px solid #CCCCCC;
+	opacity: 1;
+	border-radius: 5px;
+	box-shadow: 0px 1px 0px 1px #CCCCCC;
+}
+
+.day:after
+ {
+	opacity: 0.5;
+ }
+ 
+ .dayName
+ {
+	font-size: 20px;
+	width: 10%;
+	height: 100%;
+	padding: 5px;
+ }
+ 
+ .dayImg
+ {
+	width: 65%;
+	height: 100%;
+ }
+ 
+ .dayTemp
+ {
+	width: 20%;
+	height: 100%;
+ }
+ 
+.maxTemp
+ {
+	height: 49%;
+	width: 100%;
+	float: right;
+ }
+
+ .minTemp
+ {
+	height: 49%;
+	width: 100%;
+	float: right;
+ }
