--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -10,6 +10,20 @@ body
 	position: relativ
 }
 
+.success {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.success-style
+{
+  color: #009900;
+  background-color: #5DFC0A;
+  border-color: #55AE3A;
+}
+
 .alert {
   padding: 15px;
   margin-bottom: 20px;
